--- a/index.html
+++ b/index.html
@@ -2,9 +2,21 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <link rel="stylesheet" href="css/index.css">
+    <title>Phoenix</title>
   </head>
   <body>
+
+    <div class="main">
+      <div class="img a1"></div>
+      <div class="img a2"></div>
+      <div class="img a3"></div>
+      <div class="img a4"></div>
+      <div class="img a5"></div>
+      <div class="img a6"></div>
+      <div class="img a8"></div>
+      <div class="img a7"></div>
+    </div>
 
   </body>
 </html>
