--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <svg width="443.4" height="386" id="main">
       <g style="transform: translateX(110.50px);">
 
-<!--
+
         <g>
           <path d="M0 193 L221.7 193 L110.85 0z" class="path" onclick="phoenix()"/>
           <text x="64" y="135" class="tris_title" onclick="phoenix()">PHOENIX</text>
@@ -37,17 +37,17 @@
 
 
         <g class="hidde" style="transform: translateY(193px); opacity: 0;">
-          <path d="M0 0 L221.7 0 L110.85 193z" class="path" onclick="moi()"/>
-          <text x="92" y="80" class="tris_title" onclick="moi()">BIO</text>
+          <path d="M0 0 L221.7 0 L110.85 193z" class="path" onclick="bio()"/>
+          <text x="92" y="80" class="tris_title" onclick="bio()">BIO</text>
         </g>
 
 
         <g class="hidde" style="transform: translateX(-110.85px); opacity: 0;">
           <path d="M0 0 L221.7 0 L110.85 193z" class="path"/>
-          <text x="60" y="80" class="tris_title" onclick="moi()">CREATION</text>
+          <text x="60" y="80" class="tris_title" onclick="creation()">CREATION</text>
         </g>
--->
 
+<!--
         <g>
           <path d="M0 193 L221.7 193 L110.85 0z" class="path" onclick="phoenix()"/>
           <text x="64" y="135" class="tris_title" onclick="phoenix()">PHOENIX</text>
@@ -68,9 +68,11 @@
         <g class="hidde" style="transform: translateX(-110.85px); opacity: 0;">
           <path d="M0 0 L221.7 0 L110.85 193z" class="path" onclick="creation()"/>
           <g style="transform: rotate(-60deg);"><text x="-50" y="190" class="tris_title" onclick="creation()">CREATION</text></g>
-        </g>
-
       </g>
+-->
+      </g>
+
+
     </svg>
 
   </div>
@@ -83,8 +85,11 @@
 
   <script type="text/javascript">
 
-    document.getElementById('main').style.width = (2 * 221.7);
-    document.getElementById('main').style.height = (2 * 193);
+    var tris_H = 221.7,
+        tris_W = 193;
+
+    document.getElementById('main').style.width = (2 * tris_W);
+    document.getElementById('main').style.height = (2 * tris_H);
 
 
 
@@ -93,14 +98,17 @@
     function phoenix() {
       if (flag === 1) {
         flag = 0;
+        document.getElementById('main').style = "transform: translateY(0px);";
+
         document.getElementsByClassName('hidde')[0].style = "transform: translateX(110.85px); opacity: 1;";
         document.getElementsByClassName('hidde')[1].style = "transform: translateY(193px); opacity: 1;";
         document.getElementsByClassName('hidde')[2].style = "transform: translateX(-110.85px); opacity: 1;";
 
-
       }
       else {
         flag = 1;
+        document.getElementById('main').style = "transform: translateY(0px);";
+
         document.getElementsByClassName('hidde')[0].style = "transform: translateX(110.85px); opacity: 0;";
         document.getElementsByClassName('hidde')[1].style = "transform: translateY(193px); opacity: 0;";
         document.getElementsByClassName('hidde')[2].style = "transform: translateX(-110.85px); opacity: 0;";
@@ -109,7 +117,7 @@
     }
 
 
-
+/*
     function bio() {
       if (flag === 1) {
         flag = 0;
@@ -132,7 +140,35 @@
         flag = 1;
         document.getElementById('main').style = "transform: rotate(60deg);";
       }
+    }*/
+
+
+
+    function bio() {
+      if (flag === 1) {
+        flag = 0;
+        document.getElementById('main').style = "transform: translateY(0px);";
+      }
+      else {
+        flag = 1;
+        document.getElementById('main').style = "transform: translateY(" + ((tris_H) * (-1))+ "px);";
+        console.log(tris_H * -1);
+      }
     }
+
+
+
+    function creation() {
+      if (flag === 1) {
+        flag = 0;
+        document.getElementById('main').style = "transform: rotate(0deg);";
+      }
+      else {
+        flag = 1;
+        document.getElementById('main').style = "transform: rotate(60deg);";
+      }
+    }
+
   </script>
 
 
