--- a/index.html
+++ b/index.html
@@ -24,16 +24,17 @@
     <svg width="443.4" height="386" id="main">
       <g style="transform: translateX(110.50px);">
 
-
         <g>
           <path d="M0 193 L221.7 193 L110.85 0z" class="path" onclick="phoenix()"/>
           <text x="64" y="135" class="tris_title" onclick="phoenix()">PHOENIX</text>
         </g>
 
 
+
+
         <g class="hidde" style="transform: translateX(110.85px); opacity: 0;">
           <path d="M0 0 L221.7 0 L110.85 193z" class="path" onclick="creation()"/>
-                    <text x="59" y="80" class="tris_title" onclick="creation()">CREATION</text>
+          <text x="59" y="80" class="tris_title" onclick="creation()">CREATION</text>
         </g>
 
 
@@ -47,33 +48,12 @@
           <path d="M0 0 L221.7 0 L110.85 193z" class="path" onclick="contact()"/>
           <text x="60" y="80" class="tris_title" onclick="contact()">CONTACT</text>
         </g>
-
-<!--
-        <g>
-          <path d="M0 193 L221.7 193 L110.85 0z" class="path" onclick="phoenix()"/>
-          <text x="64" y="135" class="tris_title" onclick="phoenix()">PHOENIX</text>
-        </g>
-
-
-        <g class="hidde" style="transform: translateX(110.85px); opacity: 0;">
-          <path d="M0 0 L221.7 0 L110.85 193z" class="path"/>
-        </g>
-
-
-        <g class="hidde" style="transform: translateY(193px); opacity: 0;">
-          <path d="M0 0 L221.7 0 L110.85 193z" class="path" onclick="bio()"/>
-          <g style="transform: rotate(60deg);"><text x="92" y="-10" class="tris_title" onclick="bio()">BIO</text></g>
-        </g>
-
-
-        <g class="hidde" style="transform: translateX(-110.85px); opacity: 0;">
-          <path d="M0 0 L221.7 0 L110.85 193z" class="path" onclick="creation()"/>
-          <g style="transform: rotate(-60deg);"><text x="-50" y="190" class="tris_title" onclick="creation()">CREATION</text></g>
-      </g>
--->
       </g>
 
 
+    </svg>
+    <svg width="15" height="15" id="C_contact" class="svg_C" style="opacity: 0;">
+      <circle cx="7.5" cy="7.5" r="6" class="circle" />
     </svg>
 
   </div>
