--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <div class="center">
 
     <div id="main">
-      <svg width="443.4" height="386">
+      <svg width="650.4" height="386">
         <g style="transform: translateX(110.50px);">
 
           <g>
@@ -36,6 +36,11 @@
           <g class="hidde" style="transform: translateX(110.85px); opacity: 0;">
             <path d="M0 0 L221.7 0 L110.85 193z" class="path" onclick="creation()"/>
             <text x="59" y="80" class="tris_title" onclick="creation()">CREATION</text>
+
+            <g style="transform: translateX(110.85px); opacity: 1;">
+              <path d="M0 193 L221.7 193 L110.85 0z" class="path" onclick="phoenix()"/>
+              <text x="64" y="135" class="tris_title" onclick="virtuel()">VIRTUEL</text>
+            </g>
           </g>
 
 
